# Logistics-Intelligence-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd-dbt.yml  cd-infra.yml  ci.yml
airflow/: Dockerfile
airflow/dags/: __init__.py
airflow/dags/features/: compute_features.py
airflow/dags/ingestion/: ingest_raw_packages.py  ingest_tracking_events.py  ingest_weather_data.py
airflow/dags/quality/: data_quality_checks.py
airflow/dags/transformation/: raw_to_staging.py  run_dbt_models.py
api/: Dockerfile  __init__.py  config.py  main.py
api/models/: __init__.py  delivery.py  tracking.py
api/routers/: __init__.py  deliveries.py  features.py  health.py  tracking.py
api/services/: __init__.py  bigquery_service.py
data_generation/: __init__.py  config.py  main.py
data_generation/generators/: __init__.py  customers.py  drivers.py  locations.py  packages.py  tracking_events.py  weather.py
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: test_macros.sql
dbt/models/marts/core/: _core__models.yml  dim_customers.sql  dim_date.sql  dim_drivers.sql  dim_locations.sql  fact_deliveries.sql  fact_tracking_events.sql
dbt/models/marts/features/: _features__models.yml  ftr_customer_segments.sql  ftr_delivery_predictions.sql  ftr_route_performance.sql
dbt/models/staging/: _staging__models.yml  _staging__sources.yml  stg_customers.sql  stg_locations.sql  stg_packages.sql  stg_tracking_events.sql
dbt/seeds/: delivery_status_codes.csv  us_states.csv
docs/: architecture.md  data_dictionary.md  runbook.md  setup_guide.md
feature_store/: __init__.py  config.py  registry.py
feature_store/features/: __init__.py  customer_features.py  delivery_features.py  route_features.py
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: data_quality_checkpoint.yml
great_expectations/expectations/: packages_expectations.json  tracking_expectations.json
infrastructure/terraform/: bigquery.tf  cloudrun.tf  composer.tf  iam.tf  main.tf  outputs.tf  pubsub.tf  storage.tf  variables.tf
infrastructure/terraform/environments/: dev.tfvars  prod.tfvars
notebooks/: 01_data_exploration.ipynb
scripts/: deploy.sh  run_quality_checks.sh  setup_local.sh
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_bigquery.py
tests/unit/: test_generators.py  test_transformations.py
